desktop overflow fix

--- a/src/app/passes/passes.component.scss
+++ b/src/app/passes/passes.component.scss
@@ -47,7 +47,7 @@
 
 }
 
-@media all and (max-width: 768px){
+@media all and (max-width: 768px) {
   div.main-page-left{
     margin-right: 0;
     width: 100%;
@@ -58,7 +58,7 @@
   }
 }
 
-@media all and (max-width: 1024px){
+@media all and (max-width: 1024px) {
   .pass-collection  {
     &:last-child {
       padding-bottom: 78px;
@@ -69,6 +69,10 @@
     max-width: 335px;
     margin: 0 auto;
   }
+
+  div.passes-wrapper {
+    height: calc(100% - 78px);
+  }
 }
 
 .passes-wrapper {
@@ -77,7 +81,7 @@
   margin-left: auto;
   margin-right: auto;
   padding-top: 50px;
-  height: calc(100% - 78px);
+  height: 100%;
   overflow: auto;
 }
 
